And apply the same align and overflow fix to reg. fieldset fields

--- a/va-virkailija/web/va/style/formpreview.less
+++ b/va-virkailija/web/va/style/formpreview.less
@@ -43,6 +43,8 @@
       &:not(.soresu-text-area).medium,
       &:not(.soresu-text-area).large {
         width: 255px;
+        vertical-align: top;
+        overflow-wrap: break-word;
       }
     }
     .soresu-preview-growing-fieldset {
